--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1645,26 +1645,22 @@ html, body, .container, .content {
     font-weight: bold;
 }
 
-#new_project li {
-    top: 0px!important;
-    margin-top: 0px!important;
-    text-align: center;
-    width: 55px;
-    height: 45px;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #49afcd;
-    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
-    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
-    border-color: #2f96b4 #2f96b4 #1f6377;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+#projects .navbar {
+    position: relative;
+    bottom: 17px;
+    margin-bottom: 0px;
 }
 
-#projects li a img {
+#projects .nav a {
+    text-shadow: none;
+    padding: 6px;
+}
+
+#projects .nav .btn-primary:hover, #projects .nav .btn-primary:focus {
+    background-color: #0044cc;
+}
+
+#projects li.last_projects a img {
     width: 40px;
     height: 40px;
     position: relative;
@@ -1672,10 +1668,11 @@ html, body, .container, .content {
     padding: 0px;
     border-radius: 5px;
     background-color: #fff;
+    opacity: 0.8;
 }
 
-#projects li a img:hover {
-    opacity: 0.8;
+#projects li.last_projects a img:hover {
+    opacity: 1;
 }
 
 #all_projects_link {
