--- a/views/default/sprints.html
+++ b/views/default/sprints.html
@@ -3,49 +3,13 @@
 <script>
     // OBS: other global variables for this page
     var url = {
-        create_or_update_itens : '{{=URL("create_or_update_itens.json")}}',
-        move_tasks : '{{=URL("move_tasks")}}',
-        removeTask : '{{=URL("remove_board_task")}}',
-        edit_owner_task : '{{=URL("_edit_owner_task")}}',
-        team_page : '{{=URL(f="team",args=[request.args(0)])}}',
-        team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         card_modal : '{{=URL(r=request,f="call",args=["json","_card_modal"])}}',
-        card_new_comment_or_update : '{{=URL(r=request,f="call",args=["json","_card_new_comment_or_update"])}}',
-        card_delete_comment : '{{=URL(r=request,f="call",args=["json","_card_delete_comment"])}}',
-        update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
-    },
-    msg = {
-        field_empty : '{{=T("Click to write")}}',
-        validation_error : '{{=T("Can not be empty")}}',
-        confirm : '{{=T("Are you sure you want to continue?")}}',
-        task_undated : '{{=T("You must first put a start date or move to IN PROGRESS column")}}',
-        task_no_belong : '{{=T("This task does not belong to another definition of ready")}}',
-        remove_sucess : '{{=T("Removed Successfully!")}}',
-        remove_error : '{{=T("Error in removal!")}}',
-        no_role : '{{=T("Some members of the team are without a paper, go TEAM PAGE and add their respective roles.")}}',
-        no_team : '{{=T("There are not members on the team, go TEAM PAGE and add new members.")}}',
-        task_no_exist : '{{=T("first insert the card content.")}}',
-        card_assign : '{{=T("Assign this card to a member of team before moving it")}}',
     },
     txt = {
-        team_page : '{{=T("Team Page")}}',
-        started_in : '{{=T("Started in")}}',
-        activities : '{{=T("Activities")}}',
         upload : '{{=T("Upload")}}',
-        labels : '{{=T("Labels")}}',
-        delete_card : '{{=T("Delete")}}',
-        type_message : '{{=T("Type your message")}}',
-    },
-    button = {
-        comment : '{{=T("Comment")}}',
-        edit : '{{=T("Edit")}}',
-        save : '{{=T("Save")}}',
-        cancel : '{{=T("Cancel")}}',
-        delete : '{{=T("Delete")}}',
     },
     info = {
         project_id : '{{=project.id}}',
-        page : '{{=request.function}}',
     }
 </script>
 
@@ -114,7 +78,7 @@
                 </div> <!-- /list_definition_ready -->
                 <hr>
                 {{pass}}
-            </div>
+            </div> <!-- /story_content -->
 
         </div> <!-- /widget-content -->
         {{pass}}
