--- a/views/default/board.html
+++ b/views/default/board.html
@@ -74,7 +74,7 @@
             <!-- <div class="clearfix"></div> -->
         </div>
         <div id="live_search" class="pull-left">
-            <input type="text" name="livesearch" placeholder='{{=T("Make a search in tasks")}}'>
+            <input type="text" name="livesearch" placeholder='{{=T("Make a search in")}} {{=T("tasks")}}'>
             <p id="nothingfound">{{=T("No name match your search!")}}</p>
             <div id="expand_close_btns">
                 <button class="btn btn-nostyle expand_all_stories pull-left" alt='{{=T("Open Stories")}}' title='{{=T("Open Stories")}}'>
