--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -180,6 +180,7 @@
 
             {{ elif request.function == "sprints": }}
             <script src='{{=URL("static","js/sprints-modal.js")}}'></script>
+            <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script src='{{=URL("static","js/sprints.js")}}'></script>
             {{ pass }}
 
