--- a/views/default/login_register.html
+++ b/views/default/login_register.html
@@ -86,7 +86,7 @@
 
                         <label class="checkbox">
                             <input name="checkboxes" value="Option one" type="checkbox" required>
-                            {{=T("I agree to the")}} <a href="#">{{=T("terms and conditions")}}</a>
+                            {{=T("I agree to the")}} <a data-toggle="modal" href="#terms_conditions" title='{{=T("terms and conditions")}}'>{{=T("terms and conditions")}}</a>
                         </label>
 
                         <button type="submit" class="btn btn-success btn-large">{{=T("Create your account")}}</button>
@@ -96,4 +96,28 @@
             </div>
         </div>
     </section>
+</div>
+
+
+<!-- OS TERMOS DE COMPROMISSO VAO ESCRITOS AQUI -->
+<div id="terms_conditions" class="modal hide fade">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h3>{{=T("Terms of Agreement")}}</h3>
+    </div>
+    <div class="modal-body">
+        <h4>{{=T("User Privacy")}}:</h4>
+        <ul>
+            <li>{{=T("The Scrumforme")}}<strong> {{=T("does not give or sell your data to third parties")}}.</strong></li>
+            <li>{{=T("The data of your projects")}} <strong>{{=T("are accessible only by you")}}</strong> {{=T("and those with whom you decide to share, through the functionality to add users to the project")}}.</li>
+            <li><strong>{{=T("You are not prompted in any event, bank details or passwords")}}.</strong></li>
+        </ul>
+        <br />
+        <h4><strong>{{=T("ATTENTION")}}:</strong></h4>
+        <br />
+        <p>{{=T("The Scrumforme")}} <strong>{{=T("reserves the right to modify or add new items to these Terms of Agreement")}}</strong>, {{=T("but do not worry, because")}} <strong>{{=T("you will be notified by email or in your control panel")}}.</strong></p>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" data-dismiss="modal">{{=T("Close")}}</button>
+    </div>
 </div>
