send email to a new user and change password

--- a/views/default/login_register.html
+++ b/views/default/login_register.html
@@ -74,7 +74,7 @@
 
                             <!-- senha -->
                             {{ form_register.elements('#auth_user_password')[0] ['_placeholder'] = T("Password") }}
-                            {{ form_register.elements('#auth_user_password')[0] ['_class'] = "input-xlarge" }}
+                            {{ form_register.elements('#auth_user_password')[0] ['_class'] = "input-xlarge register_password" }}
                             {{ form_register.elements('#auth_user_password')[0] ['_required'] = "required" }}
                             {{=form_register.custom.widget.password}}
 
