--- a/views/reset_password.html
+++ b/views/reset_password.html
@@ -11,7 +11,7 @@
             <div style='width: 550px;margin:20px;font-size: 16px;line-height: 20px;'>
                 <h4 style='padding-top: 20px;text-align: left;height: 25px;margin-bottom: 0;font-size: 22px;font-weight: normal; margin-top: 0px;'>{{=T("Reset your password!")}}</h4>
                 <section>
-                        <p style="text-align: left;">{{=T("Click on the link")}} {{=link}} {{=T("to change your password")}}</p>
+                        <p style="text-align: left;">{{=T("Click on the link")}} <img src="{{=link}}" title="Scrumforme" alt="Scrumforme"> {{=T("to change your password")}}</p>
                 </section>
             </div>
         </div>
