finaly email send is ok

--- a/views/verify_email.html
+++ b/views/verify_email.html
@@ -5,13 +5,13 @@
     <body style='font-family: Arial;'>
         <div style='width: 600px; height: 250px; margin:0 auto; background-color: #F9FBFC; border-bottom:solid 10px #3b3b3b;'>
             <div style='background-color:#3b3b3b;'>
-                <a href="http://www.scrumfor.me/" target="_blank" title="Scrumforme" alt="Scrumforme"><img style='padding-top: 22px;padding: 20px;float:left' title="Scrumforme" alt="Scrumforme" src='{{=URL("static", "img/scrumformelogo.png")}}'></a>
+                <a href="http://www.scrumfor.me/" target="_blank" title="Scrumforme" alt="Scrumforme"><img style='padding-top: 22px;padding: 20px;float:left' title="Scrumforme" alt="Scrumforme" src={{="http://"+request.env.http_host+URL("static", "img/scrumformelogo.png")}}></a>
                 <div style='clear:both'></div>
             </div>
             <div style='width: 550px;margin:20px;font-size: 16px;line-height: 20px;'>
                 <h4 style='padding-top: 20px;text-align: left;height: 25px;margin-bottom: 0;font-size: 22px;font-weight: normal; margin-top: 0px;'>{{=T("Activate your registration!")}}</h4>
                 <section>
-                        <p style="text-align: left;">{{=T("Click on the link")}} <img src="{{=link}}" title="Scrumforme" alt="Scrumforme"> {{=T("to verify your email")}}</p>
+                        <p style="text-align: left;">{{=T("Click on the link")}} {{=link}} {{=T("to change your password")}}</p>
                 </section>
             </div>
         </div>
